--- a/notebooks/1k_10K_dset_sampling.ipynb
+++ b/notebooks/1k_10K_dset_sampling.ipynb
@@ -566,6 +566,295 @@
     "            continue\n",
     "        check_split(split_dir)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9ac19dc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Stats for subset 1k: /Users/julianquast/Downloads/pusht_noise_1k ===\n",
+      "  split: train\n",
+      "    - rel_actions.pth [RAW]: samples=221,400 feat_dim=2 (scale=1.0, stride=1)\n",
+      "      mean: [-0.312646,  0.260833]\n",
+      "      std : [15.063884, 14.829579]\n",
+      "    - rel_actions.pth [SCALED/STRIDED]: samples=221,400 feat_dim=2 (scale=100.0, stride=1)\n",
+      "      mean: [-0.003126,  0.002608]\n",
+      "      std : [0.150639, 0.148296]\n",
+      "    - states.pth: samples=221,400 feat_dim=5 (scale=1.0, stride=1)\n",
+      "      mean: [118.281876, 148.32808 , 125.58703 , 139.52927 ,   1.085302]\n",
+      "      std : [137.72513, 161.16718, 133.32805, 145.71861,   1.73888]\n",
+      "    - states_constant.pth: missing\n",
+      "  split: val\n",
+      "    - rel_actions.pth [RAW]: samples=24,600 feat_dim=2 (scale=1.0, stride=1)\n",
+      "      mean: [-0.369958,  0.402305]\n",
+      "      std : [15.223104, 15.381005]\n",
+      "    - rel_actions.pth [SCALED/STRIDED]: samples=24,600 feat_dim=2 (scale=100.0, stride=1)\n",
+      "      mean: [-0.0037  ,  0.004023]\n",
+      "      std : [0.152231, 0.15381 ]\n",
+      "    - states.pth: samples=24,600 feat_dim=5 (scale=1.0, stride=1)\n",
+      "      mean: [117.4255  , 151.69733 , 125.03642 , 143.43373 ,   1.047184]\n",
+      "      std : [136.12288 , 163.31985 , 133.93793 , 148.48428 ,   1.644893]\n",
+      "    - states_constant.pth: missing\n",
+      "\n",
+      "=== Stats for subset 10k: /Users/julianquast/Downloads/pusht_noise_10k ===\n",
+      "  split: train\n",
+      "    - rel_actions.pth [RAW]: samples=2,214,000 feat_dim=2 (scale=1.0, stride=1)\n",
+      "      mean: [-0.36953 ,  0.328818]\n",
+      "      std : [14.843125, 14.722512]\n",
+      "    - rel_actions.pth [SCALED/STRIDED]: samples=2,214,000 feat_dim=2 (scale=100.0, stride=1)\n",
+      "      mean: [-0.003695,  0.003288]\n",
+      "      std : [0.148431, 0.147225]\n",
+      "    - states.pth: samples=2,214,000 feat_dim=5 (scale=1.0, stride=1)\n",
+      "      mean: [115.863365, 148.13002 , 123.305336, 139.50023 ,   1.080451]\n",
+      "      std : [135.9158  , 162.18025 , 132.06897 , 147.15077 ,   1.735476]\n",
+      "    - states_constant.pth: missing\n",
+      "  split: val\n",
+      "    - rel_actions.pth [RAW]: samples=246,000 feat_dim=2 (scale=1.0, stride=1)\n",
+      "      mean: [-0.430338,  0.371427]\n",
+      "      std : [14.66584 , 14.600504]\n",
+      "    - rel_actions.pth [SCALED/STRIDED]: samples=246,000 feat_dim=2 (scale=100.0, stride=1)\n",
+      "      mean: [-0.004303,  0.003714]\n",
+      "      std : [0.146658, 0.146005]\n",
+      "    - states.pth: samples=246,000 feat_dim=5 (scale=1.0, stride=1)\n",
+      "      mean: [115.16242 , 146.1749  , 121.974785, 137.10294 ,   1.082811]\n",
+      "      std : [136.57123 , 162.11267 , 131.85356 , 146.97966 ,   1.756644]\n",
+      "    - states_constant.pth: missing\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === Compute mean/std for actions + states (streaming; safe for large files) ===\n",
+    "# Computes per-dimension mean/std over ALL timesteps of all episodes in a split.\n",
+    "# Supports:\n",
+    "#   actions: [N, T, A] or [N, A]\n",
+    "#   states : [N, T, D] or [N, D]\n",
+    "#\n",
+    "# Updates vs your version:\n",
+    "#   - Optional ACTION_SCALE (e.g. 100.0) applied BEFORE stats\n",
+    "#   - Optional TIME_STRIDE (e.g. 5) applied on time axis BEFORE stats\n",
+    "#   - Reports BOTH raw and scaled/strided stats for actions (so you can compare)\n",
+    "#   - Still streams to avoid RAM spikes\n",
+    "\n",
+    "import gc\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from typing import Any\n",
+    "\n",
+    "torch.set_grad_enabled(False)\n",
+    "torch.set_num_threads(1)\n",
+    "\n",
+    "ACTIONS_FNAME = \"rel_actions.pth\"\n",
+    "STATES_FNAME = \"states.pth\"\n",
+    "STATES_CONST_FNAME = \"states_constant.pth\"\n",
+    "\n",
+    "DATASET_DIR = Path(\"/Users/julianquast/Downloads/pusht_noise\").expanduser()\n",
+    "TARGETS = [\n",
+    "    (DATASET_DIR.parent / f\"{DATASET_DIR.name}_1k\", \"1k\"),\n",
+    "    (DATASET_DIR.parent / f\"{DATASET_DIR.name}_10k\", \"10k\"),\n",
+    "]\n",
+    "\n",
+    "# If memory is tight, reduce this. If it's fast, you can increase.\n",
+    "BATCH_EPISODES = 256\n",
+    "\n",
+    "# --- YOUR NORMALIZATION / SAMPLING SETTINGS ---\n",
+    "ACTION_SCALE = 100.0     # set to 1.0 to disable; if you normalize actions by /100 in training, keep 100.0\n",
+    "TIME_STRIDE = 1          # set to 5 if you want stats computed on x[:, ::5, :] (training-time stride)\n",
+    "\n",
+    "# -------------------- Core streaming stats --------------------\n",
+    "def _flatten_samples(x: torch.Tensor) -> torch.Tensor:\n",
+    "    \"\"\"\n",
+    "    Flatten everything except last dim to [num_samples, feat_dim].\n",
+    "    \"\"\"\n",
+    "    if x.ndim == 1:\n",
+    "        return x.reshape(-1, 1)\n",
+    "    return x.reshape(-1, x.shape[-1])\n",
+    "\n",
+    "def _stream_mean_std_rows(x2: torch.Tensor, chunk_rows: int = 1_000_000) -> tuple[torch.Tensor, torch.Tensor, int]:\n",
+    "    \"\"\"\n",
+    "    x2: [num_samples, feat_dim] float/double tensor on CPU\n",
+    "    returns mean, std (float32), and sample count.\n",
+    "    \"\"\"\n",
+    "    n = 0\n",
+    "    mean = torch.zeros(x2.shape[1], dtype=torch.float64)\n",
+    "    M2 = torch.zeros(x2.shape[1], dtype=torch.float64)\n",
+    "\n",
+    "    for start in range(0, x2.shape[0], chunk_rows):\n",
+    "        xb = x2[start:start + chunk_rows].to(torch.float64)\n",
+    "        nb = xb.shape[0]\n",
+    "        if nb == 0:\n",
+    "            continue\n",
+    "\n",
+    "        b_mean = xb.mean(dim=0)\n",
+    "        b_var = xb.var(dim=0, unbiased=False)\n",
+    "\n",
+    "        if n == 0:\n",
+    "            mean = b_mean\n",
+    "            M2 = b_var * nb\n",
+    "            n = nb\n",
+    "        else:\n",
+    "            delta = b_mean - mean\n",
+    "            new_n = n + nb\n",
+    "            mean = mean + delta * (nb / new_n)\n",
+    "            M2 = M2 + b_var * nb + (delta * delta) * (n * nb / new_n)\n",
+    "            n = new_n\n",
+    "\n",
+    "    var = M2 / max(n, 1)\n",
+    "    std = torch.sqrt(var)\n",
+    "    return mean.to(torch.float32), std.to(torch.float32), int(n)\n",
+    "\n",
+    "def _load_tensor(path: Path) -> Any:\n",
+    "    return torch.load(str(path), map_location=\"cpu\")\n",
+    "\n",
+    "def _extract_tensor(obj: Any, fname: str) -> torch.Tensor | None:\n",
+    "    if torch.is_tensor(obj):\n",
+    "        return obj\n",
+    "    if isinstance(obj, dict):\n",
+    "        # pick first tensor value (heuristic)\n",
+    "        for v in obj.values():\n",
+    "            if torch.is_tensor(v):\n",
+    "                return v\n",
+    "    return None\n",
+    "\n",
+    "def _apply_time_stride(x: torch.Tensor, stride: int) -> torch.Tensor:\n",
+    "    if stride <= 1:\n",
+    "        return x\n",
+    "    # Only applies cleanly if there is a time dimension.\n",
+    "    # Convention here: [N, T, D] -> stride on axis 1.\n",
+    "    if x.ndim >= 3:\n",
+    "        return x[:, ::stride, ...]\n",
+    "    return x\n",
+    "\n",
+    "def compute_stats_for_file(\n",
+    "    split_dir: Path,\n",
+    "    fname: str,\n",
+    "    *,\n",
+    "    action_scale: float = 1.0,\n",
+    "    time_stride: int = 1,\n",
+    ") -> dict:\n",
+    "    p = split_dir / fname\n",
+    "    if not p.exists():\n",
+    "        return {\"file\": fname, \"present\": False}\n",
+    "\n",
+    "    obj = _load_tensor(p)\n",
+    "    x = _extract_tensor(obj, fname)\n",
+    "    if x is None:\n",
+    "        return {\"file\": fname, \"present\": True, \"error\": f\"Not a tensor or dict-with-tensor: {type(obj).__name__}\"}\n",
+    "\n",
+    "    if x.ndim < 1:\n",
+    "        return {\"file\": fname, \"present\": True, \"error\": f\"Tensor has ndim={x.ndim}\"}\n",
+    "\n",
+    "    # Apply time stride if applicable\n",
+    "    x = _apply_time_stride(x, time_stride)\n",
+    "\n",
+    "    # Apply scaling (mainly for actions)\n",
+    "    if action_scale != 1.0:\n",
+    "        x = x / float(action_scale)\n",
+    "\n",
+    "    N = int(x.shape[0])\n",
+    "\n",
+    "    # Stream over episodes to control memory\n",
+    "    total_n = 0\n",
+    "    mean = torch.zeros(x.shape[-1] if x.ndim > 1 else 1, dtype=torch.float64)\n",
+    "    M2 = torch.zeros_like(mean)\n",
+    "\n",
+    "    for s in range(0, N, BATCH_EPISODES):\n",
+    "        xb = x[s:s + BATCH_EPISODES]\n",
+    "        x2 = _flatten_samples(xb)  # [num_samples, feat_dim]\n",
+    "\n",
+    "        b_mean, b_std, nb = _stream_mean_std_rows(x2)\n",
+    "        b_mean64 = b_mean.to(torch.float64)\n",
+    "        b_var64 = (b_std.to(torch.float64) ** 2)\n",
+    "\n",
+    "        if total_n == 0:\n",
+    "            mean = b_mean64\n",
+    "            M2 = b_var64 * nb\n",
+    "            total_n = nb\n",
+    "        else:\n",
+    "            delta = b_mean64 - mean\n",
+    "            new_n = total_n + nb\n",
+    "            mean = mean + delta * (nb / new_n)\n",
+    "            M2 = M2 + b_var64 * nb + (delta * delta) * (total_n * nb / new_n)\n",
+    "            total_n = new_n\n",
+    "\n",
+    "        gc.collect()\n",
+    "\n",
+    "    var = M2 / max(total_n, 1)\n",
+    "    std = torch.sqrt(var)\n",
+    "\n",
+    "    # cleanup\n",
+    "    del obj, x\n",
+    "    gc.collect()\n",
+    "\n",
+    "    return {\n",
+    "        \"file\": fname,\n",
+    "        \"present\": True,\n",
+    "        \"samples\": int(total_n),\n",
+    "        \"feat_dim\": int(mean.numel()),\n",
+    "        \"mean\": mean.to(torch.float32).numpy(),\n",
+    "        \"std\": std.to(torch.float32).numpy(),\n",
+    "        \"action_scale\": float(action_scale),\n",
+    "        \"time_stride\": int(time_stride),\n",
+    "    }\n",
+    "\n",
+    "def pretty_print_stats(stats: dict, max_dims: int = 10, label: str = \"\"):\n",
+    "    if not stats.get(\"present\", False):\n",
+    "        print(f\"    - {stats['file']}{label}: missing\")\n",
+    "        return\n",
+    "    if \"error\" in stats:\n",
+    "        print(f\"    - {stats['file']}{label}: ERROR: {stats['error']}\")\n",
+    "        return\n",
+    "\n",
+    "    mean = stats[\"mean\"]\n",
+    "    std = stats[\"std\"]\n",
+    "    d = stats[\"feat_dim\"]\n",
+    "    shown = min(d, max_dims)\n",
+    "\n",
+    "    def fmt(arr):\n",
+    "        return np.array2string(arr[:shown], precision=6, separator=\", \")\n",
+    "\n",
+    "    tail = \"\" if d <= max_dims else f\" ... (+{d-max_dims} dims)\"\n",
+    "    print(f\"    - {stats['file']}{label}: samples={stats['samples']:,} feat_dim={d} (scale={stats['action_scale']}, stride={stats['time_stride']})\")\n",
+    "    print(f\"      mean: {fmt(mean)}{tail}\")\n",
+    "    print(f\"      std : {fmt(std)}{tail}\")\n",
+    "\n",
+    "for root, tag in TARGETS:\n",
+    "    print(f\"\\n=== Stats for subset {tag}: {root} ===\")\n",
+    "    if not root.exists():\n",
+    "        print(\"  MISSING subset directory\")\n",
+    "        continue\n",
+    "\n",
+    "    for split in (\"train\", \"val\"):\n",
+    "        split_dir = root / split\n",
+    "        if not split_dir.exists():\n",
+    "            print(f\"  MISSING split: {split_dir}\")\n",
+    "            continue\n",
+    "\n",
+    "        print(f\"  split: {split}\")\n",
+    "\n",
+    "        # Actions: report RAW and (optionally) NORMALIZED/STRIDED\n",
+    "        a_raw = compute_stats_for_file(split_dir, ACTIONS_FNAME, action_scale=1.0, time_stride=1)\n",
+    "        pretty_print_stats(a_raw, label=\" [RAW]\")\n",
+    "\n",
+    "        a_norm = compute_stats_for_file(split_dir, ACTIONS_FNAME, action_scale=ACTION_SCALE, time_stride=TIME_STRIDE)\n",
+    "        # Only print normalized if it differs from raw settings\n",
+    "        if ACTION_SCALE != 1.0 or TIME_STRIDE != 1:\n",
+    "            pretty_print_stats(a_norm, label=f\" [SCALED/STRIDED]\")\n",
+    "\n",
+    "        # States: typically not scaled; optionally strided if you want stats at training stride\n",
+    "        s_stats = compute_stats_for_file(split_dir, STATES_FNAME, action_scale=1.0, time_stride=TIME_STRIDE)\n",
+    "        sc_stats = compute_stats_for_file(split_dir, STATES_CONST_FNAME, action_scale=1.0, time_stride=TIME_STRIDE)\n",
+    "\n",
+    "        pretty_print_stats(s_stats)\n",
+    "        pretty_print_stats(sc_stats)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
