Add notebook to recompute validation metrics

--- a/notebooks/recompute_val_metrics.ipynb
+++ b/notebooks/recompute_val_metrics.ipynb
@@ -102,6 +102,80 @@
       "execution_count": null,
       "outputs": [],
       "source": [
+        "from einops import rearrange\n",
+        "from utils import slice_trajdict_with_t\n",
+        "\n",
+        "def err_eval_single(model, z_pred, z_tgt):\n",
+        "    logs = {}\n",
+        "    for k in z_pred.keys():\n",
+        "        logs[k] = model.emb_criterion(z_pred[k], z_tgt[k])\n",
+        "    return logs\n",
+        "\n",
+        "def openloop_rollout(model, dset, cfg, num_rollout=10, rand_start_end=True, min_horizon=5):\n",
+        "    torch.manual_seed(cfg.training.seed)\n",
+        "    min_horizon = min_horizon + cfg.model.num_hist\n",
+        "    logs = {}\n",
+        "\n",
+        "    num_past = [(cfg.model.num_hist, \"\"), (1, \"_1framestart\")]\n",
+        "\n",
+        "    for idx in range(num_rollout):\n",
+        "        valid_traj = False\n",
+        "        while not valid_traj:\n",
+        "            traj_idx = torch.randint(0, len(dset), ()).item()\n",
+        "            obs, act, _, _ = dset[traj_idx]\n",
+        "            act = act.to(device)\n",
+        "            if rand_start_end:\n",
+        "                if obs[\"visual\"].shape[0] > min_horizon * cfg.dataset.frameskip + 1:\n",
+        "                    start = torch.randint(0, obs[\"visual\"].shape[0] - min_horizon * cfg.dataset.frameskip - 1, ()).item()\n",
+        "                else:\n",
+        "                    start = 0\n",
+        "                max_horizon = (obs[\"visual\"].shape[0] - start - 1) // cfg.dataset.frameskip\n",
+        "                if max_horizon > min_horizon:\n",
+        "                    valid_traj = True\n",
+        "                    horizon = torch.randint(min_horizon, max_horizon + 1, ()).item()\n",
+        "            else:\n",
+        "                valid_traj = True\n",
+        "                start = 0\n",
+        "                horizon = (obs[\"visual\"].shape[0] - 1) // cfg.dataset.frameskip\n",
+        "\n",
+        "        for k in obs.keys():\n",
+        "            obs[k] = obs[k][\n",
+        "                start : start + horizon * cfg.dataset.frameskip + 1 : cfg.dataset.frameskip\n",
+        "            ]\n",
+        "        act = act[start : start + horizon * cfg.dataset.frameskip]\n",
+        "        act = rearrange(act, \"(h f) d -> h (f d)\", f=cfg.dataset.frameskip)\n",
+        "\n",
+        "        obs_g = {k: obs[k][-1].unsqueeze(0).unsqueeze(0).to(device) for k in obs.keys()}\n",
+        "        z_g = model.encode_obs(obs_g)\n",
+        "        actions = act.unsqueeze(0) if model.use_action_encoder else None\n",
+        "\n",
+        "        for n_past, postfix in num_past:\n",
+        "            obs_full = {k: obs[k].unsqueeze(0).to(device) for k in obs.keys()}\n",
+        "            z_obses, _ = model.rollout(obs_full, actions, num_obs_init=n_past)\n",
+        "            z_obs_last = slice_trajdict_with_t(z_obses, start_idx=-1, end_idx=None)\n",
+        "            div_loss = err_eval_single(model, z_obs_last, z_g)\n",
+        "\n",
+        "            for k in div_loss.keys():\n",
+        "                log_key = f\"z_{k}_err_rollout{postfix}\"\n",
+        "                logs.setdefault(log_key, []).append(div_loss[k])\n",
+        "\n",
+        "    logs = {key: sum(values) / len(values) for key, values in logs.items() if values}\n",
+        "    return logs\n",
+        "\n",
+        "rollout_logs = openloop_rollout(model, traj_dsets[\"valid\"], model_cfg, num_rollout=10, rand_start_end=True)\n",
+        "rollout_logs = {f\"val_{k}\": (v.detach().mean().cpu().item() if torch.is_tensor(v) else float(v)) for k, v in rollout_logs.items()}\n",
+        "\n",
+        "print(\"Open-loop rollout metrics (mean over rollouts):\")\n",
+        "for key, value in sorted(rollout_logs.items()):\n",
+        "    print(f\"  {key}: {value:.6f}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "source": [
         "def move_to_device(value, device):\n",
         "    if torch.is_tensor(value):\n",
         "        return value.to(device)\n",
