Add notebook to recompute validation metrics

--- a/notebooks/recompute_val_metrics.ipynb
+++ b/notebooks/recompute_val_metrics.ipynb
@@ -105,12 +105,6 @@
         "from einops import rearrange\n",
         "from utils import slice_trajdict_with_t\n",
         "\n",
-        "def err_eval_single(model, z_pred, z_tgt):\n",
-        "    logs = {}\n",
-        "    for k in z_pred.keys():\n",
-        "        logs[k] = model.emb_criterion(z_pred[k], z_tgt[k])\n",
-        "    return logs\n",
-        "\n",
         "def openloop_rollout(model, dset, cfg, num_rollout=10, rand_start_end=True, min_horizon=5):\n",
         "    torch.manual_seed(cfg.training.seed)\n",
         "    min_horizon = min_horizon + cfg.model.num_hist\n",
@@ -153,11 +147,11 @@
         "            obs_full = {k: obs[k].unsqueeze(0).to(device) for k in obs.keys()}\n",
         "            z_obses, _ = model.rollout(obs_full, actions, num_obs_init=n_past)\n",
         "            z_obs_last = slice_trajdict_with_t(z_obses, start_idx=-1, end_idx=None)\n",
-        "            div_loss = err_eval_single(model, z_obs_last, z_g)\n",
         "\n",
-        "            for k in div_loss.keys():\n",
+        "            for k in z_obs_last.keys():\n",
+        "                div_loss = model.emb_criterion(z_obs_last[k], z_g[k])\n",
         "                log_key = f\"z_{k}_err_rollout{postfix}\"\n",
-        "                logs.setdefault(log_key, []).append(div_loss[k])\n",
+        "                logs.setdefault(log_key, []).append(div_loss)\n",
         "\n",
         "    logs = {key: sum(values) / len(values) for key, values in logs.items() if values}\n",
         "    return logs\n",
