--- a/notebooks/figures.ipynb
+++ b/notebooks/figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "1ce1e2b4",
    "metadata": {},
    "outputs": [
@@ -20,22 +20,23 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import LogLocator, LogFormatter\n",
     "\n",
     "# -----------------------\n",
     "# Data\n",
     "# -----------------------\n",
     "dataset_sizes = np.array([5_000, 10_000, 15_000, 25_000, 50_000, 100_000])\n",
     "\n",
-    "rmse_variant_a = np.array([0.83, 0.78, 0.76, 0.73, 0.70, 0.67])\n",
-    "rmse_variant_b = np.array([np.nan, np.nan, np.nan, np.nan, np.nan, np.nan])\n",
-    "rmse_variant_c = np.array([np.nan, np.nan, np.nan, np.nan, np.nan, np.nan])\n",
+    "decoder_z = np.array([0.83, 0.78, 0.76, 0.73, 0.70, 0.67])\n",
+    "decoder_z_e = np.array([np.nan, np.nan, np.nan, np.nan, np.nan, np.nan])\n",
+    "decoder_full = np.array([np.nan, np.nan, np.nan, np.nan, np.nan, np.nan])\n",
     "\n",
     "baseline_low_bound = 1.444\n",
     "\n",
     "series = [\n",
-    "    (\"Decoder variant A\", rmse_variant_a),\n",
-    "    (\"Decoder variant B\", rmse_variant_b),\n",
-    "    (\"Decoder variant C\", rmse_variant_c),\n",
+    "    (\"Decoder variant A\", decoder_z),\n",
+    "    (\"Decoder variant B\", decoder_z_e),\n",
+    "    (\"Decoder variant C\", decoder_full),\n",
     "]\n",
     "\n",
     "# -----------------------\n",
@@ -44,74 +45,88 @@
     "plt.rcParams.update({\n",
     "    \"figure.dpi\": 350,\n",
     "    \"savefig.dpi\": 350,\n",
-    "    \"font.size\": 8,\n",
+    "    \"font.size\": 6,\n",
     "    \"axes.labelsize\": 10,\n",
-    "    \"axes.titlesize\": 12,\n",
-    "    \"legend.fontsize\": 10,\n",
+    "    \"axes.titlesize\": 10,\n",
+    "    \"legend.fontsize\": 8,\n",
     "})\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(7.2, 4.2))\n",
     "\n",
-    "# Model curves\n",
+    "# -----------------------\n",
+    "# Curves\n",
+    "# -----------------------\n",
     "for name, y in series:\n",
     "    if np.any(np.isfinite(y)):\n",
     "        ax.plot(\n",
     "            dataset_sizes,\n",
     "            y,\n",
-    "            linewidth=2.4,\n",
+    "            linewidth=1.4,\n",
     "            label=name,\n",
     "        )\n",
     "\n",
-    "# Baseline (subtle)\n",
+    "# Baseline\n",
     "ax.axhline(\n",
     "    baseline_low_bound,\n",
-    "    linestyle=\"--\",\n",
-    "    linewidth=1.6,\n",
-    "    color=\"0.6\",   # neutral grey\n",
-    "    alpha=0.8,\n",
+    "    linestyle=\"-\",\n",
+    "    linewidth=1.2,\n",
+    "    color=\"0.6\",\n",
+    "    alpha=0.9,\n",
     "    label=\"Baseline (mean action predictor)\",\n",
     ")\n",
-    "# Horizontal grid-style reference lines for start/end RMSE\n",
-    "y_start = rmse_variant_a[0]\n",
-    "y_end = rmse_variant_a[-1]\n",
     "\n",
-    "for y in [y_start, y_end]:\n",
-    "    ax.axhline(\n",
-    "        y=y,\n",
-    "        linestyle=\"-\",\n",
-    "        linewidth=1.0,\n",
-    "        color=\"0.85\",   # light grey like grid\n",
-    "        alpha=1.0,\n",
-    "        zorder=0,       # keep behind curves\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Axes formatting\n",
+    "# -----------------------\n",
+    "# Axes scales & limits\n",
+    "# -----------------------\n",
     "ax.set_xscale(\"log\")\n",
+    "ax.set_yscale(\"log\")\n",
+    "\n",
+    "ax.set_xlim(dataset_sizes[0], dataset_sizes[-1])\n",
+    "ax.set_ylim(0.65, 1.6)\n",
+    "\n",
+    "# -----------------------\n",
+    "# Ticks\n",
+    "# -----------------------\n",
     "ax.set_xticks(dataset_sizes)\n",
     "ax.set_xticklabels([f\"{int(s/1000)}k\" for s in dataset_sizes])\n",
     "\n",
+    "ax.yaxis.set_major_locator(LogLocator(base=10.0, numticks=10))\n",
+    "ax.yaxis.set_minor_locator(LogLocator(base=10.0, subs=np.arange(2, 10) * 0.1))\n",
+    "ax.yaxis.set_major_formatter(LogFormatter(labelOnlyBase=False))\n",
+    "\n",
+    "# -----------------------\n",
+    "# Grid (modern & subtle)\n",
+    "# -----------------------\n",
+    "ax.grid(True, which=\"major\", axis=\"both\", linestyle=\":\", linewidth=0.8, color=\"0.85\")\n",
+    "ax.grid(True, which=\"minor\", axis=\"y\", linestyle=\":\", linewidth=0.4, color=\"0.92\")\n",
+    "\n",
+    "# -----------------------\n",
+    "# Labels & styling\n",
+    "# -----------------------\n",
     "ax.set_xlabel(\"Number of training samples\")\n",
     "ax.set_ylabel(\"RMSE\")\n",
     "ax.set_title(\"RMSE vs. dataset size\")\n",
     "\n",
-    "# Modern axis styling\n",
     "ax.spines[\"top\"].set_visible(False)\n",
     "ax.spines[\"right\"].set_visible(False)\n",
     "\n",
     "ax.tick_params(axis=\"both\", which=\"major\", length=5, width=1)\n",
-    "ax.margins(y=0.08)\n",
+    "ax.tick_params(axis=\"y\", which=\"minor\", length=3, width=0.8)\n",
     "\n",
-    "# Legend (no box, inside)\n",
-    "ax.legend(\n",
-    "    frameon=False,\n",
-    "    loc=\"upper right\",\n",
-    ")\n",
+    "ax.margins(y=0.05)\n",
+    "\n",
+    "# Legend (optional)\n",
+    "# ax.legend(frameon=False, loc=\"upper right\")\n",
     "\n",
     "fig.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# -----------------------\n",
+    "# Export (optional)\n",
+    "# -----------------------\n",
+    "# fig.savefig(\"rmse_vs_dataset_size_loglog.png\", bbox_inches=\"tight\")\n",
+    "# fig.savefig(\"rmse_vs_dataset_size_loglog.pdf\", bbox_inches=\"tight\")\n",
+    "\n"
    ]
   }
  ],
